--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="header">
             <div>
-                <a href="#">  <img src="./img/logo.svg" alt=""></a>
+                <a href="#"> <img src="./img/logo.svg" alt=""></a>
             </div>
             <div>
                 <button class="header-btn">Войти</button>
@@ -147,9 +147,15 @@
                 <h1 class="fast-uber"><span class="fast-tit">#</span>UberEats</h1>
 
                 <div class="fast-icons">
-                    <div><i class="fab fa-facebook"></i></div>
-                    <div><i class="fab fa-twitter"></i></div>
-                    <div><i class="fab fa-instagram"></i></div>
+                    <a href="https://www.facebook.com/">
+                        <div><i class="fab fa-facebook"></i></div>
+                    </a>
+                    <a href="https://twitter.com/?lang=ru">
+                        <div><i class="fab fa-twitter"></i></div>
+                    </a>
+                    <a href="https://www.instagram.com/?hl=ru">
+                        <div><i class="fab fa-instagram"></i></div>
+                    </a>
                 </div>
             </div>
             <div class="fast-text">
